# mps-to-circuit

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish-to-pypi.yml  run-ruff.yml
mps_to_circuit/: __init__.py  mps_to_circuit.py  mps_to_circuit_approx.py  mps_to_circuit_exact.py
mps_to_circuit/utils/: __init__.py  math.py  matrix.py  tensor.py
test/: __init__.py  test_mps_to_circuit.py
