[project]
name = "mps-to-circuit"
version = "0.1.0"
description = "Tool to convert a matrix product state to a Qiskit quantum circuit."
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "qiskit>=1.0.0",
]

[tool.uv]
dev-dependencies = ["pytest>=8.3.3", "ruff>=0.7.0", "quimb==1.8.4"]
override-dependencies = ["quimb==1.8.4"]

[tool.ruff]
lint.extend-select = ["I"]
